<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sobre"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.pch.livraria28scj.SobreActivity"
    android:background="@color/background_splash">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="16dp"
      android:src="@drawable/logo"
      android:id="@+id/ivlogo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:layout_toRightOf="@id/ivlogo"
        android:layout_marginLeft="10dp"
        android:paddingTop="16dp"
        android:typeface="serif"
        android:textStyle="bold"
        android:id="@+id/tvDesenvolvido"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nome"
        android:layout_marginLeft="10dp"
        android:id="@+id/tvnome"
        android:layout_toRightOf="@id/ivlogo"
        android:layout_below="@id/tvDesenvolvido"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_version"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/tvnome"
        android:layout_toRightOf="@id/ivlogo"
        android:paddingTop="16dp"
        android:id="@+id/tvVersao"
        android:textStyle="bold"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_reserved"
      android:layout_marginLeft="10dp"
      android:layout_below="@id/ivlogo"
      android:paddingTop="20dp"/>

</RelativeLayout>
